
[package]
name = "wait-for-file"
version = "0.2.2"
edition = "2021"
authors = ["Cyrinux <crates@levis.name>"]
description = "GTK4 app that wait for file, start a command, with extra button."
license = "MIT"
repository = "https://github.com/cyrinux/wait-for-file-gtk4"
readme = "README.md"
keywords = ["gtk4", "file", "monitor", "command", "launcher"]
categories = ["gui", "filesystem"]
rust-version = "1.83"


[dependencies]
gtk4 = "0.6"
gdk4 = "0.6"
glib = "0.14"
gio = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
